update signup form

--- a/public/signup.html
+++ b/public/signup.html
@@ -29,7 +29,7 @@
                 <a href="index.html"><img src="../SFSU-Folio.png" /></a>
               </div>
               <div class="px-2">
-                <form action="" class="justify-content-center">
+                <form action="signup_info.html" class="justify-content-center">
                   <div class="form-group">
                     <label class="sr-only">SFSU email</label>
                     <input
@@ -61,10 +61,11 @@
                       placeholder="Comfirm Password"
                     />
                   </div>
-
-                  <button type="submit" class="btn btn-secondary btn-lg">
-                    Sign Up
-                  </button>
+                  <a href="signup_info.html">
+                    <button type="submit" class="btn btn-secondary btn-lg">
+                      Sign Up
+                    </button>
+                  </a>
 
                   <hr />
                   <a href="signin.html">
