--- a/public/signup_info.html
+++ b/public/signup_info.html
@@ -46,7 +46,7 @@
                         id="exampleFormControlFile1"
                       />
                     </div>
-                    <div class="col-sm-7">
+                    <div class="col-sm-5 p-1">
                       <input
                         class="form-check-input"
                         type="checkbox"
