update about page

--- a/public/about.html
+++ b/public/about.html
@@ -22,12 +22,12 @@
       <div id="cover-caption">
         <div class="container">
           <div class="logo text-left py-5">
-            <a href="index.html"><img src="../SFSU-Folio.png" /></a>
+            <a href="../index.html"><img src="../SFSU-Folio.png" /></a>
           </div>
           <div class="container">
-            <h1 class="p-5">Who Are We?</h1>
-            <div>
-              <p>
+            <h1 class="p-5 text-success">Who Are We?</h1>
+            <div class="about">
+              <p class="text-success">
                 Wellcome to SFSU-Folio, a start up team composed of San
                 Francisco State University student has come together to create a
                 portfolio sharing community that will be exclusively for SFSU
