--- a/public/signup.html
+++ b/public/signup.html
@@ -26,7 +26,7 @@
               class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4"
             >
               <div class="display-5 py-5 text-truncate">
-                <a href="index.html"><img src="../SFSU-Folio.png" /></a>
+                <a href="../index.html"><img src="../SFSU-Folio.png" /></a>
               </div>
               <div class="px-2">
                 <form action="signup_info.html" class="justify-content-center">
