--- a/public/signup_info.html
+++ b/public/signup_info.html
@@ -27,10 +27,10 @@
       <div class="cover-caption">
         <div class="mx-auto form p-5">
           <div class="display-5 py-5 text-truncate">
-            <a href="index.html"><img src="../SFSU-Folio.png" /></a>
+            <a href="../index.html"><img src="../SFSU-Folio.png" /></a>
           </div>
           <div class="mx-auto p-4">
-            <form action="index.html">
+            <form action="../index.html">
               <div class="form-group row mx-5 no-gutters">
                 <label
                   for="inputEmail3"
