update about page

--- a/public/about.html
+++ b/public/about.html
@@ -27,7 +27,7 @@
           <div class="container">
             <h1 class="p-5 text-success">Who Are We?</h1>
             <div class="about">
-              <p class="text-success">
+              <p class="text-success p-5">
                 Wellcome to SFSU-Folio, a start up team composed of San
                 Francisco State University student has come together to create a
                 portfolio sharing community that will be exclusively for SFSU
