add cutomer html

--- a/public/about.html
+++ b/public/about.html
@@ -29,8 +29,8 @@
             <div class="about">
               <p class="text-success p-5">
                 Wellcome to SFSU-Folio, a start up team composed of San
-                Francisco State University student has come together to create a
-                portfolio sharing community that will be exclusively for SFSU
+                Francisco State University students have come together to create
+                a portfolio sharing community that will be exclusively for SFSU
                 students.
               </p>
             </div>
