--- a/public/signup.html
+++ b/public/signup.html
@@ -26,10 +26,10 @@
               class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4"
             >
               <div class="display-5 py-5 text-truncate">
-                <a href="../index.html"><img src="../SFSU-Folio.png" /></a>
+                <img src="../SFSU-Folio.png" />
               </div>
               <div class="px-2">
-                <form action="signup_info.html" class="justify-content-center">
+                <form action="" class="justify-content-center">
                   <div class="form-group">
                     <label class="sr-only">SFSU email</label>
                     <input
@@ -61,11 +61,10 @@
                       placeholder="Comfirm Password"
                     />
                   </div>
-                  <a href="signup_info.html">
-                    <button type="submit" class="btn btn-secondary btn-lg">
-                      Sign Up
-                    </button>
-                  </a>
+
+                  <button type="submit" class="btn btn-secondary btn-lg">
+                    Sign Up
+                  </button>
 
                   <hr />
                   <a href="signin.html">
