--- a/public/signup_info.html
+++ b/public/signup_info.html
@@ -26,10 +26,10 @@
     <section class="min-vh-100 cover">
       <div class="cover-caption">
         <div class="mx-auto form p-5">
-          <div class="display-5 py-5 text-truncate">
+          <div class="display-5 py-5">
             <a href="../index.html"><img src="../SFSU-Folio.png" /></a>
           </div>
-          <div class="mx-auto p-4">
+          <div class="">
             <form action="../index.html">
               <div class="form-group row mx-5 no-gutters">
                 <label
@@ -93,20 +93,34 @@
 
               <div class="form-group row mx-5 text-center no-gutters">
                 <label
-                  for="exampleFormControlFile1"
+                  for="courses"
                   class="col-sm-4 col-form-label mx-auto my-0"
                   >SFSU Courses</label
                 >
-                <div class="col-sm-7"></div>
+                <div class="col-sm-7">
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="exampleInputEmail1"
+                    aria-describedby="emailHelp"
+                    placeholder="Your courses"
+                  />
+                </div>
               </div>
 
               <div class="form-group row mx-5 text-center no-gutters">
-                <label
-                  for="exampleFormControlFile1"
-                  class="col-sm-4 col-form-label mx-auto my-0"
+                <label for="skills" class="col-sm-4 col-form-label mx-auto my-0"
                   >Skills</label
                 >
-                <div class="col-sm-7"></div>
+                <div class="col-sm-7">
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="exampleInputEmail1"
+                    aria-describedby="emailHelp"
+                    placeholder="Skills"
+                  />
+                </div>
               </div>
 
               <div class="form-group row mx-5 text-center no-gutters">
