--- a/public/signup.html
+++ b/public/signup.html
@@ -29,7 +29,7 @@
                 <img src="../SFSU-Folio.png" />
               </div>
               <div class="px-2">
-                <form action="" class="justify-content-center">
+                <form action="signup_info.html" class="justify-content-center">
                   <div class="form-group">
                     <label class="sr-only">SFSU email</label>
                     <input
