--- a/public/signup_info.html
+++ b/public/signup_info.html
@@ -45,17 +45,7 @@
                         class="form-control-file"
                         id="exampleFormControlFile1"
                       />
-                    </div>
-                    <div class="col-sm-5 p-1">
-                      <input
-                        class="form-check-input"
-                        type="checkbox"
-                        value=""
-                        id="defaultCheck1"
-                      />
-                      <label class="form-check-label" for="defaultCheck1">
-                        Agree with the terms and conditions
-                      </label>
+                      <span><small>(Picture is Optional)</small></span>
                     </div>
                   </div>
                 </div>
